--- a/src/css/arcade.css
+++ b/src/css/arcade.css
@@ -36,8 +36,7 @@ button:active {
 /* Заголовок */
 .arcade-header {
     position: absolute;
-    top: calc(env(safe-area-inset-top, 0px) + 12px); /* от выреза + чуть пикселей */
-    top: calc(constant(safe-area-inset-top) + 12px); /* для старых iOS */
+    top: 5vh;
     left: 50%;
     transform: translateX(-50%);
     z-index: 10;
